# jellyfin-tui-rs

./: .envrc  .gitignore  .gitmodules  Cargo.toml  License.md  Readme.md  build.rs  flake.nix  hm-module.nix  jellyfin-tui.nix  jellyhaj-incremental.nix  jellyhaj.desktop  jellyhaj.nix  rust-toolchain.toml
.github/workflows/: nix-build.yml
.sqlx/: query-0497079921a9ac52ff4ef2b858022bb20c8a91b2568ce9ddf32f1dc8a048b5a3.json  query-10e048a641895ec81ff9d1d17318af738d686979cd56666561662d109fb51f43.json  query-5545dad83130557df6f3259967d29766cce83de1fc825030e0131342127675fd.json  query-6fb8aca14f8d3fa393b9fc56d6fc7b259a9c2a2ec4a927183b36f362e01e7d73.json  query-8f554b3bf89a4fc44a7d14c259870bd2074ca8989454bad5a71ed14959de26ef.json  query-9b688b1f5be6118b0484b62f0f45dc5e38b2621d50b7a9392965a64002314c2b.json  query-bcff14d89b904a3f798043b9d74283cd105f1ab30540e124904d19fbc95ef37d.json  query-bdfbaf31d8610f1accb2767f65212832020430723f618fff128772ea0959fdf2.json  query-dc00ae52e92f632de6c12fe181c852d642cdb7512e2761c6e4b993d7f5d54030.json
checkbox/: Cargo.toml
checkbox/src/: lib.rs
config/: Cargo.toml  config.toml  keybinds.toml  login.toml
config/src/: cache.rs  keybinds.rs  lib.rs
entries/: Cargo.toml
entries/src/: entry.rs  grid.rs  lib.rs  list.rs  screen.rs
entries/src/image/: available.rs  cache.rs  fetch.rs  mod.rs  parse.rs  state.rs
fetch/: Cargo.toml
fetch/src/: lib.rs
home-screen/: Cargo.toml
home-screen/src/: lib.rs  load.rs
item-view/: Cargo.toml
item-view/src/: item_details.rs  item_list_details.rs  lib.rs
jellyfin-rs/: Cargo.toml  flake.nix
jellyfin-rs/src/: activity.rs  auth.rs  connect.rs  err.rs  image.rs  items.rs  lib.rs  library.rs  playback_status.rs  playlist.rs  request.rs  scheduled_tasks.rs  sha.rs  shows.rs  socket.rs  user.rs  user_library.rs  user_views.rs
jellyfin-tui-core/: Cargo.toml
jellyfin-tui-core/src/: config.rs  context.rs  entries.rs  keybinds.rs  lib.rs  state.rs
jellyhaj-core/: Cargo.toml
jellyhaj-core/src/: context.rs  entries.rs  keybinds.rs
keybinds/: Cargo.toml
keybinds-derive/: Cargo.toml
keybinds-derive-impl/: Cargo.toml
keybinds-derive-impl/src/: command.rs  gen_from_config.rs  keybind_config.rs  lib.rs
keybinds-derive/src/: lib.rs
keybinds/src/: lib.rs  parse_config.rs  stream.rs  widget.rs
libmpv-rs/: Cargo.toml
libmpv-rs/examples/: events.rs  protocol.rs
libmpv-rs/libmpv-sys/: Cargo.toml
libmpv-rs/libmpv-sys/src/: lib.rs  pregenerated_bindings.rs
libmpv-rs/src/: hazard.rs  lib.rs  tests.rs
libmpv-rs/src/mpv/: errors.rs  events.rs  mod.rs  node.rs  protocol.rs
library-view/: Cargo.toml
library-view/src/: lib.rs
log-screen/: Cargo.toml
log-screen/src/: lib.rs
login/: Cargo.toml
login/src/: lib.rs
migrations/: 20250223213309_image-cache.sql  20250310184106_creds.sql  20251119205450_image_cache_with_size.sql  20251226190529_drop_creds.sql
player/: Cargo.toml
player-core/: Cargo.toml
player-core/src/: create.rs  diff.rs  lib.rs  log.rs  mpv_stream.rs  poll.rs  state.rs
player-jellyfin/: Cargo.toml
player-jellyfin/src/: lib.rs
player-mpris/: Cargo.toml
player-mpris/src/: lib.rs  media_player.rs  player.rs  track_list.rs  types.rs
player/src/: fetch_items.rs  lib.rs
ratatui_fallible_widget/: Cargo.toml
ratatui_fallible_widget/src/: lib.rs
refresh-item/: Cargo.toml
refresh-item/src/: lib.rs
serde-json-ratatui/: Cargo.toml
serde-json-ratatui/src/: lib.rs
spawn/: Cargo.toml
spawn/src/: lib.rs  pool.rs  spawner.rs
src/: auth.rs  cache.rs  entry.rs  err.rs  error.rs  fetch.rs  grid.rs  image.rs  item_details.rs  item_list_details.rs  items.rs  keybinds.rs  lib.rs  list.rs  login.rs  main.rs  mpv.rs  play_video.rs  screen.rs  session.rs  sha.rs  state.rs  user_library.rs  user_view.rs
src/entry/: media_item.rs  mod.rs
src/home_screen/: list.rs  load.rs  mod.rs  screen.rs
src/keybinds/: mod.rs  parse_config.rs  stream.rs  widget.rs
src/mpv/: fetch_items.rs  log.rs  mod.rs  mpv_stream.rs  player.rs
stats-data/: Cargo.toml
stats-data/src/: lib.rs
stats-view/: Cargo.toml
stats-view/src/: lib.rs
user-view/: Cargo.toml
user-view/src/: lib.rs
