[package]
name = "jellyfin-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "6.0.0"
futures-util = "0.3.31"
jellyfin = { path = "jellyfin-rs", features = ["native-tls", "sha-openssl"]}
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros", "parking_lot", "rt", "signal", "time"] }
toml = { version = "0.8.19", default-features = false, features = ["display", "parse"] }
url = "2.5.4"
whoami = { version = "1.5.2", default-features = false }
tracing = "0.1.41"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ratatui-image = { version = "5.0.0", features = ["crossterm"], default-features = false }
image = { version = "0.25.5", default-features = false, features = ["webp", "png"] }
rayon = "1.10.0"
bytes = "1.9.0"
libmpv = { path = "libmpv-rs", default-features = false, features = ["tracing", "tokio"] }
libmpv-sys = { path = "libmpv-rs/libmpv-sys" }
parking_lot = "0.12.3"
tracing-core = { version = "0.1.33", default-features = false }
sqlx = { version = "0.8.3", default-features = false, features = ["macros", "migrate", "runtime-tokio"] }
log = "0.4.26"
tokio-util = "0.7.13"
serde_json = "1.0.139"
either = "1.14.0"
pin-project-lite = "0.2.16"
textwrap = { version = "0.16.2", features = [] }
keybinds = {path = "keybinds"}
ansi-to-tui = "7.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.170"

[workspace]
members = ["jellyfin-rs", "keybinds", "keybinds-derive", "keybinds-derive-impl", "libmpv-rs", "libmpv-rs/libmpv-sys"]

[features]
default = ["sqlite-unbundled"]
use-bindgen = ["libmpv-sys/use-bindgen"]
sqlite-bundled = ["sqlx/sqlite"]
sqlite-unbundled = ["sqlx/sqlite-unbundled"]
attach = []

[profile.dev.package."*"]
opt-level = 3
