[package]
name = "jellyfin-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
jellyfin-tui-core = {path = "jellyfin-tui-core"}
keybinds = {path = "keybinds"}
jellyfin = { path = "jellyfin-rs"}
entries = { path = "entries"}
config = { path = "config" }
spawn = {path = "spawn"}

login = { path = "login"}
home-screen = {path = "home-screen"}
user-view = {path = "user-view"}
player = {path = "player"}
item-view = {path = "item-view"}

clap = { version = "4.5.23", features = ["derive"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ansi-to-tui = "7.0.0"

rayon = {workspace=true}
color-eyre = {workspace=true}
crossterm = {workspace=true}
futures-util = {workspace=true}
ratatui = {workspace=true}
ratatui-image = {workspace=true}
image = {workspace=true}
serde = {workspace=true}
tokio = { workspace=true, features = ["macros", "parking_lot", "rt", "signal", "time"] }
tokio-util = {workspace=true}
tracing = {workspace=true}
bytes = {workspace=true}
parking_lot = {workspace=true}
sqlx = {workspace=true}
serde_json = {workspace=true}
either = {workspace=true}
pin-project-lite = {workspace=true}
toml = {workspace = true}
dirs = {workspace = true}

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.170"

[workspace]
members = [ "config", "entries", "fetch", "home-screen", "item-view","jellyfin-rs", "jellyfin-tui-core", "keybinds", "keybinds-derive", "keybinds-derive-impl", "libmpv-rs", "libmpv-rs/libmpv-sys", "login", "player",  "player-core", "player-jellyfin", "spawn", "user-view"]

[workspace.dependencies]
log = "0.4.26"
dirs = "6.0.0"
textwrap = { version = "0.16.2", features = [] }
parking_lot = "0.12.3"
rayon = "1.10.0"
base64 = "0.22.1"
bytes = "1.9.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde_urlencoded = "0.7.1"
tracing = "0.1.41"
tracing-core = { version = "0.1.33", default-features = false }
tokio = { version = "1.28.2" }
tokio-util = "0.7.13"
tokio-websockets = { version = "0.12.0", features = ["client", "getrandom", "aws_lc_rs"] }
futures-core = "0.3.31"
futures-sink = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
pin-project-lite = "0.2.16"
hyper = { version = "1.7.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.16", features = ["tokio"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["aws_lc_rs", "logging"] }
rustls-native-certs = "0.8.1"
aws-lc-rs = { version = "1.13.3", default-features = false }
http = "1.3.1"
color-eyre = "0.6.5"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
ratatui-image = { version = "8.0.0", features = ["crossterm"], default-features = false }
either = "1.15.0"
itertools = "0.14.0"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = {version = "2.0.100", default-features = false}
pkg-config = "0.3.31"
bindgen = "0.69"
sqlx = { version = "0.8.3", default-features = false, features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
image = { version = "0.25.5", default-features = false, features = ["webp", "png"] }
toml = { version = "0.9.5", default-features = false, features = ["serde", "display", "parse"] }
whoami = { version = "1.5.2", default-features = false }

[features]
default = ["sqlite-unbundled"]
sqlite-bundled = ["sqlx/sqlite"]
sqlite-unbundled = ["sqlx/sqlite-unbundled"]
use-bindgen = ["player/use-bindgen"]
attach = []


[profile.dev.package."*"]
opt-level = 3
