[package]
name = "home-screen"
version = "0.1.0"
edition = "2024"

[dependencies]
jellyhaj-core = {path = "../jellyhaj-core"}
keybinds = {path = "../keybinds"}
jellyfin = { path = "../jellyfin-rs"}
entries = {path = "../entries"}
fetch = {path = "../fetch"}
ratatui_fallible_widget = {path = "../ratatui_fallible_widget"}

color-eyre = {workspace=true}
tracing = {workspace=true}
ratatui = {workspace=true}
tokio = { workspace=true, features = ["macros"] }
futures-util = {workspace=true}
