[package]
name = "jellyfin"
version = "0.1.4"
edition = "2021"
license = "MIT"
keywords = ["media", "jellyfin", "streaming"]
categories = ["api-bindings"]
description = "Bindings to the jellyfin web API"
homepage = "https://github.com/sargon64/jellyfin-rs"
repository = "https://github.com/sargon64/jellyfin-rs"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
debug = []
rustls-ring = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
sha-openssl = ["dep:openssl", "tokio-websockets/openssl"]
sha-ring = ["dep:ring", "tokio-websockets/ring"]
sha-aws-lc-rs = ["dep:aws-lc-rs", "tokio-websockets/aws_lc_rs"]

[dependencies]
aws-lc-rs = { version = "1.12.0", optional = true }
base64 = "0.22.1"
bytes = "1.9.0"
openssl = { version = "0.10.68", optional = true }
reqwest = { version = "0.12.0", features = ["http2", "json"], default-features = false }
ring = { version = "0.17.8", optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tracing = "0.1.41"
url = "2.4.0"
tower = { version = "0.5.2", features = ["limit"] }
tokio-websockets = { version = "0.12.0", features = ["client", "getrandom"] }
getrandom = "0.3.2"
futures-core = "0.3.31"
tokio = { version = "1.28.2", features = ["time"] }
futures-sink = "0.3.31"
pin-project-lite = "0.2.16"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros"] }
