[package]
name = "jellyfin"
version = "0.1.4"
edition = "2024"
license = "MIT"
keywords = ["media", "jellyfin", "streaming"]
categories = ["api-bindings"]
description = "Bindings to the jellyfin web API"
homepage = "https://github.com/sargon64/jellyfin-rs"
repository = "https://github.com/sargon64/jellyfin-rs"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
base64 = "0.22.1"
bytes = "1.9.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tracing = "0.1.41"
tokio-websockets = { version = "0.12.0", features = ["client", "getrandom", "aws_lc_rs"] }
futures-core = "0.3.31"
tokio = { version = "1.28.2", features = ["time"] }
futures-sink = "0.3.31"
pin-project-lite = "0.2.16"
hyper = { version = "1.7.0", features = ["client", "http1", "http2"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["aws_lc_rs", "logging"] }
rustls-native-certs = "0.8.1"
aws-lc-rs = { version = "1.13.3", default-features = false }
http = "1.3.1"
hyper-util = { version = "0.1.16", features = ["tokio"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
serde_urlencoded = "0.7.1"
color-eyre = "0.6.5"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros"] }
