[package]
name = "jellyfin"
version = "0.1.4"
edition = "2024"
license = "MIT"
keywords = ["media", "jellyfin", "streaming"]
categories = ["api-bindings"]
description = "Bindings to the jellyfin web API"
homepage = "https://github.com/sargon64/jellyfin-rs"
repository = "https://github.com/sargon64/jellyfin-rs"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
base64 = {workspace = true}
bytes = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tokio-websockets = {workspace = true}
futures-core = {workspace = true}
tokio = { workspace = true, features = ["time"] }
futures-sink ={workspace = true}
pin-project-lite = {workspace = true}
hyper = {workspace = true}
tokio-rustls = {workspace = true}
rustls-native-certs = {workspace = true}
aws-lc-rs = {workspace = true}
http = {workspace = true}
hyper-util = {workspace = true}
futures-util = {workspace = true}
serde_urlencoded = {workspace = true}
color-eyre = {workspace = true}

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros"] }
