# Copyright (C) 2016  ParadoxSpiral
#
# This file is part of mpv-rs.
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA

[package]
name = "libmpv"
version = "2.0.1"
edition = "2024"
authors = ["ParadoxSpiral <paradoxspiral@riseup.net>"]
license = "LGPL-2.1"
readme = "README.md"
description = "Libmpv abstraction that's easy to use and can play next to all codecs and containers"
repository = "https://github.com/ParadoxSpiral/libmpv-rs"
keywords = ["media", "playback", "mpv", "libmpv"]

[dependencies]
libmpv-sys = { path = "libmpv-sys" }
tokio = { workspace = true, optional = true, features = ["time"] }
tracing = { workspace=true, optional = true }

[dev-dependencies]
crossbeam = "0.8"

[features]
default = ["render", "tokio"]
render = [] # Enable custom rendering
use-bindgen = ["libmpv-sys/use-bindgen"]
tracing = ["dep:tracing"]
tokio = ["dep:tokio", "async"]
async = []
[badges]
travis-ci = { repository = "https://github.com/ParadoxSpiral/mpv-rs", branch = "master" } 
