[package]
name = "login"
version = "0.1.0"
edition = "2024"

[dependencies]

jellyfin = { path = "../jellyfin-rs"}
jellyhaj-core = {path = "../jellyhaj-core"}
keybinds = {path = "../keybinds"}
ratatui_fallible_widget = {path = "../ratatui_fallible_widget"}

color-eyre = {workspace=true}
futures-util = {workspace=true}
ratatui = {workspace=true}
serde = {workspace=true}
sqlx = {workspace=true}
tracing = {workspace=true}
toml = {workspace = true}
whoami = {workspace=true}
tokio = { workspace=true, features = ["macros", "process"] }
