[package]
name = "player-jellyfin"
version = "0.1.0"
edition = "2024"

[dependencies]
player-core = {path="../player-core"}
jellyfin = { path = "../jellyfin-rs"}
spawn = {path = "../spawn"}

tokio = { workspace=true, features = ["rt"] }
futures-util = {workspace = true}
color-eyre = {workspace=true}
tracing = {workspace=true}
