[package]
name = "player"
version = "0.1.0"
edition = "2024"

[dependencies]
player-core = {path="../player-core"}
player-jellyfin = {path="../player-jellyfin"}
jellyfin = {path="../jellyfin-rs"}
jellyfin-tui-core = {path="../jellyfin-tui-core"}
keybinds = {path = "../keybinds"}
spawn = {path = "../spawn"}
fetch = {path = "../fetch"}

color-eyre = {workspace=true}
futures-util = {workspace=true}
tokio = { workspace=true, features = ["rt"] }
ratatui = {workspace=true}
tracing = {workspace=true}

[features]
use-bindgen = ["player-core/use-bindgen"]
